# zillow-bot

./: data.json  pyproject.toml
zillow_bot/: __init__.py
zillow_bot/api/: properties.py
zillow_bot/parser/: parse.py
